--- a/public/css/hyde.css
+++ b/public/css/hyde.css
@@ -99,6 +99,12 @@ a.sidebar-nav-item:focus {
   font-weight: bold;
 }
 
+@media only screen and (max-width: 600px) {
+  .sidebar-nav-item {
+    line-height: 2;
+  }
+}
+
 /* Sticky sidebar
  *
  * Add the `sidebar-sticky` class to the sidebar's container to affix it the
