--- a/public/css/poole.css
+++ b/public/css/poole.css
@@ -57,6 +57,11 @@ html {
     font-size: 20px;
   }
 }
+@media only screen and (max-width: 600px) {
+  html {
+    line-height: 2;
+  }
+}
 
 body {
   color: #515151;
